--- a/Uno/Uno.csproj
+++ b/Uno/Uno.csproj
@@ -47,7 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Card.cs" />
+    <Compile Include="Classes\CardPile.cs" />
     <Compile Include="Classes\Deck.cs" />
+    <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\PlayerDatabase.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
