--- a/Uno/Uno.csproj
+++ b/Uno/Uno.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Classes\CardFunctionality.cs" />
     <Compile Include="Classes\CustomControls.cs" />
     <Compile Include="Classes\Deck.cs" />
+    <Compile Include="Classes\Server.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\PlayerDatabase.cs" />
     <Compile Include="Form1.cs">
