Added more. Im tired of writing git change logs. I don;t even remember what I added.

--- a/Uno/Uno.csproj
+++ b/Uno/Uno.csproj
@@ -98,6 +98,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Chat_Icon-NewMessage.png" />
     <Content Include="Resources\Chat_Icon.png" />
   </ItemGroup>
   <ItemGroup>
