--- a/Uno/Uno.csproj
+++ b/Uno/Uno.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminConsole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminConsole.Designer.cs">
+      <DependentUpon>AdminConsole.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChatBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdminConsole.resx">
+      <DependentUpon>AdminConsole.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChatBox.resx">
       <DependentUpon>ChatBox.cs</DependentUpon>
     </EmbeddedResource>
